# Reaktor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: absorption.py  antoine_data.py  batch_reactor.py  coupled.py  cstr.py  flash.py  heater.py  reaction.py  streams.py
tests/: test_absorption.py  test_cstr.py
ui/: flowsheet_canvas.py  main_window.py  palette_panel.py  properties_panel.py  results_panel.py  styles.py
