[project]
name = "reaktor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.1.0",
    "pyqt6>=6.7.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
